T-3 | User can view list questions in Index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
       success: Question created successfully
       fail: Create question failed
     index:
+      h1: Listing questions
       create_question: Create question
   activerecord:
     attributes:
