T-3 | User can view list answers in question Show

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
       create_question: Create question
     show:
       new_answer: New answer
+      answers_list: Answers
   activerecord:
     attributes:
       question:
