T-3 | Add specs for user_delete_question

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,8 @@ en:
     index:
       h1: Listing questions
       create_question: Create question
+    delete:
+      success: Question was successfully destroyed
     show:
       new_answer: New answer
       answers_list: Answers
