T-5 | Answers#update with AJAX

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,9 @@ en:
     create:
       success: Answer created successfully
       fail: Create answer failed
+    update:
+      success: Answer was successfully updated
+      fail: Update answer failed
     delete:
       success: Answer was successfully destroyed
   questions:
