T-6 | Refactor for attachments

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
       success: Answer was successfully destroyed
   questions:
     question:
+      attachments: Attachments
       edit: Edit question
       delete: Delete question
     create:
