T-6 | Up I18n for cocoon

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -68,3 +68,7 @@ en:
       answer:
         create: "Create answer"
         update: "Save answer"
+  cocoon:
+    defaults:
+      add: Add file
+      remove: Remove file
